# ClearTemp

./: .cproject  .gitignore  .gitmodules  .project  CHANGELOG  CMakeLists.txt  ClearTemp.bat  ClearTemp.sh  LICENSE  Main.py  Makefile  README.md  build.gradle  build.ps1  build.sh  cleartemp-simplified.bat  cleartemp-simplified.sh  configure.ps1  configure.sh  settings.gradle
.github/workflows/: build.yml  codeql-analysis.yml
Debug/: ClearTemp  makefile  sources.mk
Debug/lib/engodatabase/: edb.d  subdir.mk
Debug/src/: main.d  subdir.mk
Debug/src/assets/: api.d  flags.d  subdir.mk  tools.d
include/: api.h  api.hpp  flags.h  flags.hpp  tools.h  utils.hpp
lib/Json/: json-get.py
lib/engodatabase/: edb.c  edb.h
res/: cz.edb  cz.json  en.edb  en.json
src/: main.c  main.cpp
src/assets/: api.c  flags.c  tools.c
src/main/java/me/engo/cleartemp/assets/: API.java  Tools.java
src/main/resources/: cz.json  en.json
src/me/engo/cleartemp/: Main.java
src/me/engo/cleartemp/assets/: API.java  Tools.java
src/tools/: api.cpp  flags.cpp  utils.cpp
